--- a/data.css
+++ b/data.css
@@ -1,115 +1,91 @@
-* {
-  box-sizing: border-box;
-}
 
-[class*="col-"] {
-  float: left;
-  padding: 15px;
-}
+
 
 body{
-  background-color: lightgray;
-}
-
-#page_title{
-  background-color: lightgray;
-}
-
-
-
-.aside {
-
-  padding: 15px;
-  color: #ffffff;
-  text-align: center;
-  font-size: 14px;
+    background-color: lightgray;
+  }
   
-}
-
-#section1{
-  position :relative;
-  border:1px solid;
-  background-color:whitesmoke;
- }
- 
- #section2{
-  position:relative;
-  border:1px solid;
-  background-color:whitesmoke;
- }
-
-.fig_s{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-#fig_1{
-  border-style: solid;
-  border-color: #9933cc;
-}
-
-span.rvts1 /* Heading */
-{
- font-family: 'Arial';
- font-weight: bold;
- color: black;
-}
-
-@media only screen and (max-width: 767px) {
-  /* For tablets: */
+  
+  .aside {
+  
+    padding: 15px;
+    color: #ffffff;
+    text-align: center;
+    font-size: 14px;
+    
+  }
+  
   #section1{
+    position :relative;
+    border:1px solid;
+    background-color:whitesmoke;
+   }
+   
+   #section2{
     position:relative;
-    height:auto;
-    width:auto;
-      
+    border:1px solid;
+    background-color:whitesmoke;
+   }
+  
+   .select{
+    border-style: solid;
+    border-color: #9933cc;
+    border-width: 10px;
   }
-  #section2 {
-    position:relative;
-  }
-
-}
-
-
-
-
-
-
-
-@media only screen and (min-width: 768px) {
-  /* For desktop: */
-  #section1{
+  
+  
+  @media only screen and (min-width: 300px) {
+    /* For tablets: */
+    #section1{
       position:relative;
-      margin-top:auto;
-      width:100%;
-      height:100%;
-  }
-
-  #section2{
+      height:auto;
+      width:auto;
+        
+    }
+    #section2 {
       position:relative;
-  }
-
-  .fig_1{
-  max-width:40%;
-  max-height:50%;
-  }
-
-  .fig_2{
-  max-width:40%;
-  max-height:50%;
+    }
+    .fig_0{
+      max-width:100%;
+      max-height:100%;
+      }
+  
+    .fig_1, .fig_2, .fig_3, .fig_4{
+      max-width:50%;
+      max-height:50%;
+    }
+    
   }
   
-      
-  .fig_3{
-  max-width:40%;
-  max-height:50%;
-  }
-      
-  .fig_4{
-  max-width:40%;
-  max-height:50%;
+  
+  
+  
+  
+  
+  
+  @media only screen and (min-width: 768px) {
+    /* For desktop: */
+    #section1{
+        position:relative;
+        margin-top:auto;
+    }
+  
+    #section2{
+        position:relative;
+    }
+  
+    .fig_0{
+      max-width:80%;
+      max-height:70%;
+      }
+  
+    .fig_1, .fig_2, .fig_3, .fig_4{
+      max-width:50%;
+      max-height:80%;
+    }
+  
+  
   }
   
-
-}
   
+    
