--- a/fig1.css
+++ b/fig1.css
@@ -1,113 +1,91 @@
-* {
-    box-sizing: border-box;
-  }
 
-[class*="col-"] {
-    float: left;
-    padding: 15px;
-}
-  
+
+
 body{
-    background-color: lightgray;
-  }
-
-#page_title{
-    background-color:lightgray;
+  background-color: lightgray;
 }
-
 
 
 .aside {
+
+  padding: 15px;
+  color: #ffffff;
+  text-align: center;
+  font-size: 14px;
   
-    padding: 15px;
-    color: #ffffff;
-    text-align: center;
-    font-size: 14px;
-    
-  }
+}
 
 #section1{
-    position :relative;
-    border:1px solid;
-    background-color:whitesmoke;
-   }
-   
-   #section2{
+  position :relative;
+  border:1px solid;
+  background-color:whitesmoke;
+ }
+ 
+ #section2{
+  position:relative;
+  border:1px solid;
+  background-color:whitesmoke;
+ }
+ .select{
+  border-style: solid;
+  border-color: #9933cc;
+  border-width: 10px;
+}
+
+
+@media only screen and (min-width: 300px) {
+  /* For tablets: */
+  #section1{
     position:relative;
-    border:1px solid;
-    background-color:whitesmoke;
-   }
-  
-  .fig_s{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    height:auto;
+    width:auto;
+      
+  }
+  #section2 {
+    position:relative;
   }
 
-  #fig_1{
-    border-style: solid;
-    border-color: #9933cc;
+  .fig_0{
+    max-width:100%;
+    max-height:100%;
+    }
+
+  .fig_1, .fig_2, .fig_3, .fig_4{
+    max-width:50%;
+    max-height:50%;
   }
   
+}
 
-@media only screen and (max-width: 767px) {
-    /* For tablets: */
-    #section1{
-      position:relative;
-      height:auto;
-      width:auto;
-        
-    }
-    #section2 {
-      position:relative;
-    }
-    .fig_s{
-      width:250;
-      height:250;
-    }
-  }
 
-  
 
 
 
 
 
 @media only screen and (min-width: 768px) {
-    /* For desktop: */
-    #section1{
-        position:relative;
-        margin-top:auto;
-    }
-
-    #section2{
-        position:relative;
-    }
-
-    .fig_1{
-    max-width:40%;
-    max-height:50%;
-    }
-
-    .fig_2{
-    max-width:40%;
-    max-height:50%;
-    }
-    
-        
-    .fig_3{
-    max-width:40%;
-    max-height:50%;
-    }
-        
-    .fig_4{
-    max-width:40%;
-    max-height:50%;
-    }
-
-    .fig_s{
-      max-width:100%;
-      max-height:100%;
-      }
+  /* For desktop: */
+  #section1{
+      position:relative;
+      margin-top:auto;
   }
-    
+
+  #section2{
+      position:relative;
+  }
+
+  .fig_0{
+    max-width:80%;
+    max-height:100%;
+    }
+
+  .fig_1, .fig_2, .fig_3, .fig_4{
+    max-width:50%;
+    max-height:80%;
+  }
+
+
+}
+
+
+  
