--- a/fig3.css
+++ b/fig3.css
@@ -1,20 +1,9 @@
-* {
-  box-sizing: border-box;
-}
 
-[class*="col-"] {
-  float: left;
-  padding: 15px;
-}
+
 
 body{
   background-color: lightgray;
 }
-
-#page_title{
-  background-color:lightgray;
-}
-
 
 
 .aside {
@@ -37,20 +26,14 @@ body{
   border:1px solid;
   background-color:whitesmoke;
  }
-
-.fig_s{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-#fig_3{
+ .select{
   border-style: solid;
   border-color: #9933cc;
+  border-width: 10px;
 }
 
 
-@media only screen and (max-width: 767px) {
+@media only screen and (min-width: 300px) {
   /* For tablets: */
   #section1{
     position:relative;
@@ -61,10 +44,17 @@ body{
   #section2 {
     position:relative;
   }
-  .fig_s{
-    width:250;
-    height:250;
+
+
+  .fig_1, .fig_2, .fig_3, .fig_4{
+    max-width:50%;
+    max-height:50%;
   }
+  
+  .fig_0{
+    max-width:100%;
+    max-height:100%;
+    }
 }
 
 
@@ -84,31 +74,18 @@ body{
       position:relative;
   }
 
-  .fig_1{
-  max-width:40%;
-  max-height:50%;
+  .fig_0{
+    max-width:80%;
+    max-height:100%;
+    }
+
+  .fig_1, .fig_2, .fig_3, .fig_4{
+    max-width:50%;
+    max-height:80%;
   }
 
-  .fig_2{
-  max-width:40%;
-  max-height:50%;
-  }
-  
-      
-  .fig_3{
-  max-width:40%;
-  max-height:50%;
-  }
-      
-  .fig_4{
-  max-width:40%;
-  max-height:50%;
-  }
-  
-  .fig_s{
-  max-width:100%;
-  max-height:100%;
-  }
 
 }
+
+
   
